--- a/.project
+++ b/.project
@@ -35,6 +35,11 @@
 			<type>2</type>
 			<locationURI>REPO_ROOT/Lib</locationURI>
 		</link>
+		<link>
+			<name>iperf3</name>
+			<type>2</type>
+			<locationURI>REPO_ROOT/Lib/iperf3</locationURI>
+		</link>
 	</linkedResources>
 	<filteredResources>
 		<filter>
